--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
-  "name": "table-element",
+  "name": "ant-table-element",
   "version": "0.0.1",
   "scripts": {
     "build": "weweb build",
     "serve": "weweb serve"
   },
+  "dependencies": {
+    "vue": ">=3.2.0",
+    "vue-request": "^1.0.2",
+    "axios": "^0.22.0",
+    "ant-design-vue": "4.2.3"
+  },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "typescript": "^4.0.5",
     "@weweb/cli": "latest"
-  }
+  },
+  "browserslist": [
+    "> 0.2%",
+    "not dead"
+  ]
 }
