--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {
     "vue": ">=3.2.0",
+    "ant-design-vue": "4.2.3",
+    "@ant-design/icons-vue": "^5.0.1",
     "vue-request": "^1.0.2",
-    "axios": "^0.22.0",
-    "ant-design-vue": "4.2.3"
+    "axios": "^0.22.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
